--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,52 +1,140 @@
-amqp==1.4.8
+adium-theme-ubuntu==0.3.4
+amqp==1.4.9
 anyjson==0.3.3
 asgi-redis==0.11.0
 asgiref==0.13.0
+attrs==16.0.0
 autobahn==0.14.0
-Babel==2.2.0
+Babel==2.3.4
+BeautifulSoup==3.2.1
 billiard==3.3.0.22
-boto==2.38.0
+boto==2.40.0
+ccsm==0.9.12
 celery==3.1.19
 channels==0.13.1
-colorama==0.3.5
-contextlib2==0.4.0
+chardet==2.0.1
+colorama==0.3.7
+command-not-found==0.3
+compizconfig-python==0.9.12
+configglue==1.1.2
+contextlib2==0.5.3
 coverage==4.0.3
 daphne==0.12.0
-dj-database-url==0.3.0
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+dj-database-url==0.4.1
+dj-static==0.0.6
 Django==1.8.8
 django-celery==3.1.17
 django-cors-headers==1.1.0
 django-countries==3.4.1
-django-easymoney==0.6
-django-extensions==1.6.1
-django-floppyforms==1.6.1
+django-easymoney==0.7
+django-extensions==1.6.7
+django-floppyforms==1.6.2
 django-idmap==0.4.1
 django-inspect-model==0.7
+django-ptree-extra-views==0.6.3
+django-ptree-mturk==1.0.1
+django-save-the-change==1.1.0
 django-sslify==0.2.7
 django-sslserver==0.19
 django-vanilla-views==1.0.4
-djangorestframework==3.3.2
-funcsigs==0.4
+djangorestframework==3.3.3
+dnspython==1.11.1
+duplicity==0.6.23
+flake8==2.4.1
+funcsigs==1.0.2
+GnuPGInterface==0.3.2
+gunicorn==18.0
 handy==0.5.3
-honcho==0.6.6
+honcho==0.7.1
+html5lib==0.999
+httplib2==0.8
 huey==1.1.2
 IPy==0.83
+keyring==3.5
 kombu==3.0.31
-mock==1.3.0
+launchpadlib==1.10.2
+lazr.restfulclient==0.13.3
+lazr.uri==1.0.3
+lockfile==0.8
+lxml==3.3.3
+Mako==0.9.1
+MarkupSafe==0.18
+matplotlib==1.3.1
+mccabe==0.3
+mercurial==2.8.2
+mock==2.0.0
 msgpack-python==0.4.7
-ordered-set==1.4.0
-otree-core==0.4.50
+numpy==1.8.2
+oauth==1.0.1
+oauthlib==0.6.1
+oneconf==0.3.7
+openshot==1.4.3
+ordered-set==2.0.1
+otree-core==0.5.17
 otree-save-the-change==1.1.3
-pbr==1.8.1
-pytz==2015.7
-raven==5.9.2
+PAM==0.4.2
+pbr==1.9.1
+pep8==1.5.7
+pexpect==3.1
+Pillow==2.3.0
+piston-mini-client==0.7.5
+protobuf==2.5.0
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
+PyAudio==0.2.7
+pychecker==0.8.19
+pycrypto==2.6.1
+pycups==1.9.66
+pycurl==7.19.3
+pyflakes==0.8.1
+pygobject==3.12.0
+pyinotify==0.9.4
+pyOpenSSL==0.13
+pyparsing==2.0.1
+pyserial==2.6
+pysmbc==1.0.14.1
+pystache==0.5.4
+python-apt===0.9.3.5ubuntu2
+python-dateutil==1.5
+python-debian===0.1.21-nmu2ubuntu2
+pytz==2016.4
+pyxdg==0.25
+radiotray==0.7.3
+raven==5.17.0
 redis==2.10.5
-requests==2.9.1
-selenium==2.48.0
+reportlab==3.0
+requests==2.10.0
+SecretStorage==2.0.0
+selenium==2.53.2
+service-identity==16.0.0
+sessioninstaller==0.0.0
+simplejson==3.3.1
 six==1.10.0
+software-center-aptd-plugins==0.0.0
+SQLAlchemy==0.8.4
+static==1.0.2
+static3==0.5.1
+stevedore==0.14.1
+system-service==0.1.6
 Twisted==16.1.1
+Twisted-Core==13.2.0
+Twisted-Names==13.2.0
+Twisted-Web==13.2.0
 txaio==2.5.1
 unicodecsv==0.14.1
-whitenoise==2.0.6
-xmltodict==0.9.2
+unity-lens-photos==1.0
+urllib3==1.7.1
+vboxapi==1.0
+virtualenv==12.0.2
+virtualenv-clone==0.2.4
+virtualenvwrapper==4.1.1
+wadllib==1.3.2
+whitenoise==3.0
+wxPython==2.8.12.1
+wxPython-common==2.8.12.1
+xdiagnose===3.6.3build2
+xmltodict==0.10.1
 zope.interface==4.1.3
