--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -41,7 +41,7 @@ kombu==3.0.31
 mock==2.0.0
 msgpack-python==0.4.7
 ordered-set==2.0.1
-otree-core==0.5.21
+otree-core>=1.4.17
 otree-save-the-change==1.1.3
 pbr==1.9.1
 pyasn1==0.1.9
