--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,63 +1,193 @@
+alabaster==0.7.8
 amqp==1.4.9
+anaconda-client==1.4.0
+anaconda-navigator==1.2.1
 anyjson==0.3.3
-asgi-redis==0.11.0
-asgiref==0.13.0
+appdirs==1.4.3
+argcomplete==1.0.0
+asgi-redis==0.14.1
+asgiref==0.14.0
+astropy==1.2.1
 attrs==16.0.0
-autobahn==0.14.0
+autobahn==0.16.0
 Babel==2.3.4
+backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.4.1
 billiard==3.3.0.22
+bitarray==0.8.1
+blaze==0.10.1
+bokeh==0.12.0
 boto==2.40.0
+Bottleneck==1.1.0
 celery==3.1.19
 cffi==1.6.0
-channels==0.13.1
+channels==0.17.3
+chest==0.2.3
+click==6.6
+cloudpickle==0.2.1
+clyent==1.2.2
 colorama==0.3.7
-contextlib2==0.5.3
-coverage==4.0.3
+conda==4.1.6
+conda-build==1.21.3
+conda-env==2.5.0a0
+configobj==5.0.6
+contextlib2==0.5.4
+coverage==4.2
 cryptography==1.4
-daphne==0.12.0
+cycler==0.10.0
+Cython==0.24
+cytoolz==0.8.0
+daphne==0.14.3
+dask==0.10.0
+datashape==0.5.2
+decorator==4.0.10
+dill==0.2.5
 dj-database-url==0.4.1
 Django==1.8.8
 django-celery==3.1.17
 django-cors-headers==1.1.0
-django-countries==3.4.1
+django-countries==4.0
 django-easymoney==0.7
 django-extensions==1.6.7
-django-floppyforms==1.6.2
-django-idmap==0.4.1
+django-floppyforms==1.7.0
+django-idmap==1.0
 django-inspect-model==0.7
 django-sslify==0.2.7
 django-sslserver==0.19
 django-vanilla-views==1.0.4
-djangorestframework==3.3.3
+djangorestframework==3.4.6
+docutils==0.12
+dynd==0.7.3.dev1
 enum34==1.1.6
+et-xmlfile==1.0.1
+fastcache==1.0.2
+Flask==0.11.1
+Flask-Cors==2.1.2
 funcsigs==1.0.2
+gevent==1.1.1
+greenlet==0.4.10
+h5py==2.6.0
 handy==0.5.3
+HeapDict==1.0.0
 honcho==0.7.1
-huey==1.1.2
+huey==1.2.0
 idna==2.1
+imagesize==0.7.1
 ipaddress==1.0.16
 IPy==0.83
+ipykernel==4.3.1
+ipython==4.2.0
+ipython-genutils==0.1.0
+ipywidgets==4.1.1
+itsdangerous==0.24
+jdcal==1.2
+jedi==0.9.0
+Jinja2==2.8
+jsonschema==2.5.1
+jupyter==1.0.0
+jupyter-client==4.3.0
+jupyter-console==4.1.1
+jupyter-core==4.1.0
 kombu==3.0.31
+llvmlite==0.11.0
+locket==0.2.0
+lxml==3.6.0
+MarkupSafe==0.23
+matplotlib==1.5.1
+mistune==0.7.2
 mock==2.0.0
-msgpack-python==0.4.7
+mpmath==0.19
+msgpack-python==0.4.8
+multipledispatch==0.4.8
+nb-anacondacloud==1.1.0
+nb-conda==1.1.0
+nb-conda-kernels==1.0.3
+nbconvert==4.2.0
+nbformat==4.0.1
+nbpresent==3.0.2
+networkx==1.11
+nltk==3.2.1
+nose==1.3.7
+notebook==4.2.1
+numba==0.26.0
+numexpr==2.6.0
+numpy==1.11.1
+odo==0.5.0
+openpyxl==2.3.2
 ordered-set==2.0.1
-otree-core>=1.4.17
+otree-boto2-shim==0.3.2
+otree-core>=1.4.18
 otree-save-the-change==1.1.3
-pbr==1.9.1
+packaging==16.8
+pandas==0.18.1
+partd==0.3.4
+path.py==0.0.0
+pathlib2==2.1.0
+patsy==0.4.1
+pbr==1.10.0
+pep8==1.7.0
+pexpect==4.0.1
+pickleshare==0.7.2
+Pillow==3.2.0
+ply==3.8
+psutil==4.2.0
+ptyprocess==0.5.1
+py==1.4.31
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
+pycosat==0.6.1
 pycparser==2.14
+pycrypto==2.6.1
+pycurl==7.43.0
+pyflakes==1.2.3
+Pygments==2.1.3
 pyOpenSSL==16.0.0
-pytz==2016.4
-raven==5.17.0
+pyparsing==2.2.0
+pytest==2.9.2
+pytest-django==3.0.0
+python-dateutil==2.5.3
+python-redis-lock==3.2.0
+pytz==2016.6.1
+PyYAML==3.11
+pyzmq==15.2.0
+qtconsole==4.2.1
+QtPy==1.0.2
+raven==5.25.0
 redis==2.10.5
-requests==2.10.0
+requests==2.11.1
+rope-py3k==0.9.4.post1
+ruamel-yaml===-VERSION
+schema==0.6.2
+scikit-image==0.12.3
+scikit-learn==0.17.1
+scipy==0.17.1
 selenium==2.53.2
 service-identity==16.0.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.10.0
-Twisted==16.1.1
+snowballstemmer==1.2.1
+sockjs-tornado==1.0.3
+Sphinx==1.4.1
+sphinx-rtd-theme==0.1.9
+spyder==2.3.9
+SQLAlchemy==1.0.13
+statsmodels==0.6.1
+sympy==1.0
+tables==3.2.2
+terminado==0.6
+toolz==0.8.0
+tornado==4.3
+tqdm==4.7.4
+traitlets==4.2.1
+Twisted==16.2.0
 txaio==2.5.1
 unicodecsv==0.14.1
-whitenoise==3.0
+Werkzeug==0.11.10
+whitenoise==3.2.1
+ws4py==0.3.5
+xlrd==1.0.0
+XlsxWriter==0.9.3
+xlwt==1.1.2
 xmltodict==0.10.1
-zope.interface==4.1.3
+zope.interface==4.2.0
