--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,193 +1,152 @@
-alabaster==0.7.8
+alabaster==0.7.7
 amqp==1.4.9
-anaconda-client==1.4.0
-anaconda-navigator==1.2.1
 anyjson==0.3.3
 appdirs==1.4.3
-argcomplete==1.0.0
+apturl==0.5.2
 asgi-redis==0.14.1
 asgiref==0.14.0
-astropy==1.2.1
-attrs==16.0.0
 autobahn==0.16.0
 Babel==2.3.4
-backports.shutil-get-terminal-size==1.0.0
 beautifulsoup4==4.4.1
 billiard==3.3.0.22
-bitarray==0.8.1
-blaze==0.10.1
-bokeh==0.12.0
+blinker==1.3
 boto==2.40.0
-Bottleneck==1.1.0
+Brlapi==0.6.4
 celery==3.1.19
-cffi==1.6.0
 channels==0.17.3
-chest==0.2.3
-click==6.6
-cloudpickle==0.2.1
-clyent==1.2.2
+chardet==2.3.0
+checkbox-support==0.22
 colorama==0.3.7
-conda==4.1.6
-conda-build==1.21.3
-conda-env==2.5.0a0
-configobj==5.0.6
+command-not-found==0.3
 contextlib2==0.5.4
 coverage==4.2
-cryptography==1.4
-cycler==0.10.0
-Cython==0.24
-cytoolz==0.8.0
+cryptography==1.2.3
+cycler==0.9.0
 daphne==0.14.3
-dask==0.10.0
-datashape==0.5.2
-decorator==4.0.10
-dill==0.2.5
+decorator==4.0.6
+defer==1.0.6
 dj-database-url==0.4.1
+dj-static==0.0.6
 Django==1.8.8
 django-celery==3.1.17
 django-cors-headers==1.1.0
 django-countries==4.0
-django-easymoney==0.7
 django-extensions==1.6.7
 django-floppyforms==1.7.0
 django-idmap==1.0
 django-inspect-model==0.7
 django-sslify==0.2.7
-django-sslserver==0.19
+django-toolbelt==0.0.1
 django-vanilla-views==1.0.4
 djangorestframework==3.4.6
 docutils==0.12
-dynd==0.7.3.dev1
-enum34==1.1.6
-et-xmlfile==1.0.1
-fastcache==1.0.2
-Flask==0.11.1
-Flask-Cors==2.1.2
+feedparser==5.1.3
 funcsigs==1.0.2
-gevent==1.1.1
-greenlet==0.4.10
-h5py==2.6.0
+gtimelog==0.10.0
+guacamole==0.9.2
+gunicorn==18.0
 handy==0.5.3
-HeapDict==1.0.0
 honcho==0.7.1
+html5lib==0.999
+httplib2==0.9.1
 huey==1.2.0
-idna==2.1
-imagesize==0.7.1
-ipaddress==1.0.16
+idna==2.0
 IPy==0.83
-ipykernel==4.3.1
-ipython==4.2.0
-ipython-genutils==0.1.0
-ipywidgets==4.1.1
-itsdangerous==0.24
-jdcal==1.2
+ipython==2.4.1
 jedi==0.9.0
 Jinja2==2.8
-jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.3.0
-jupyter-console==4.1.1
-jupyter-core==4.1.0
 kombu==3.0.31
-llvmlite==0.11.0
-locket==0.2.0
-lxml==3.6.0
+language-selector==0.1
+louis==2.6.4
+lxml==3.5.0
+Mako==1.0.3
 MarkupSafe==0.23
 matplotlib==1.5.1
-mistune==0.7.2
 mock==2.0.0
-mpmath==0.19
 msgpack-python==0.4.8
-multipledispatch==0.4.8
-nb-anacondacloud==1.1.0
-nb-conda==1.1.0
-nb-conda-kernels==1.0.3
-nbconvert==4.2.0
-nbformat==4.0.1
-nbpresent==3.0.2
-networkx==1.11
-nltk==3.2.1
-nose==1.3.7
-notebook==4.2.1
-numba==0.26.0
-numexpr==2.6.0
-numpy==1.11.1
-odo==0.5.0
-openpyxl==2.3.2
+numexpr==2.4.3
+numpy==1.11.0
+oauthlib==1.0.3
+onboard==1.2.0
 ordered-set==2.0.1
 otree-boto2-shim==0.3.2
-otree-core>=1.4.18
+otree-core==1.4.18
 otree-save-the-change==1.1.3
 packaging==16.8
-pandas==0.18.1
-partd==0.3.4
-path.py==0.0.0
-pathlib2==2.1.0
-patsy==0.4.1
+padme==1.1.1
+pandas==0.17.1
 pbr==1.10.0
 pep8==1.7.0
 pexpect==4.0.1
-pickleshare==0.7.2
-Pillow==3.2.0
-ply==3.8
+Pillow==3.1.2
+plainbox==0.25
 psutil==4.2.0
-ptyprocess==0.5.1
+psycopg2==2.5.1
+ptyprocess==0.5
 py==1.4.31
 pyasn1==0.1.9
-pyasn1-modules==0.0.8
-pycosat==0.6.1
-pycparser==2.14
-pycrypto==2.6.1
+pycups==1.9.73
 pycurl==7.43.0
-pyflakes==1.2.3
-Pygments==2.1.3
-pyOpenSSL==16.0.0
+pyflakes==1.1.0
+Pygments==2.1
+pygobject==3.20.0
+PyJWT==1.3.0
 pyparsing==2.2.0
 pytest==2.9.2
 pytest-django==3.0.0
-python-dateutil==2.5.3
+python-apt==1.1.0b1
+python-dateutil==2.4.2
+python-debian==0.1.27
 python-redis-lock==3.2.0
+python-systemd==231
 pytz==2016.6.1
-PyYAML==3.11
+pyxdg==0.25
 pyzmq==15.2.0
-qtconsole==4.2.1
-QtPy==1.0.2
 raven==5.25.0
 redis==2.10.5
+reportlab==3.3.0
 requests==2.11.1
-rope-py3k==0.9.4.post1
-ruamel-yaml===-VERSION
+roman==2.0.0
 schema==0.6.2
-scikit-image==0.12.3
-scikit-learn==0.17.1
-scipy==0.17.1
+scipy==0.17.0
+screen-resolution-extra==0.0.0
 selenium==2.53.2
-service-identity==16.0.0
+sessioninstaller==0.0.0
 simplegeneric==0.8.1
-singledispatch==3.4.0.3
 six==1.10.0
-snowballstemmer==1.2.1
-sockjs-tornado==1.0.3
-Sphinx==1.4.1
+Sphinx==1.3.6
 sphinx-rtd-theme==0.1.9
-spyder==2.3.9
-SQLAlchemy==1.0.13
-statsmodels==0.6.1
-sympy==1.0
+spyder==2.3.8
+static3==0.7.0
+system-service==0.3
 tables==3.2.2
-terminado==0.6
-toolz==0.8.0
-tornado==4.3
 tqdm==4.7.4
-traitlets==4.2.1
 Twisted==16.2.0
 txaio==2.5.1
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
 unicodecsv==0.14.1
-Werkzeug==0.11.10
+unity-scope-calculator==0.1
+unity-scope-chromiumbookmarks==0.1
+unity-scope-colourlovers==0.1
+unity-scope-devhelp==0.1
+unity-scope-firefoxbookmarks==0.1
+unity-scope-gdrive==0.7
+unity-scope-manpages==0.1
+unity-scope-openclipart==0.1
+unity-scope-texdoc==0.1
+unity-scope-tomboy==0.1
+unity-scope-virtualbox==0.1
+unity-scope-yelp==0.1
+unity-scope-zotero==0.1
+unity-tweak-tool==0.0.7
+urllib3==1.13.1
+usb-creator==0.3.0
 whitenoise==3.2.1
 ws4py==0.3.5
-xlrd==1.0.0
+xdiagnose==3.8.4.1
+xkit==0.0.0
 XlsxWriter==0.9.3
-xlwt==1.1.2
 xmltodict==0.10.1
 zope.interface==4.2.0
