--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,150 +1,63 @@
-alabaster==0.7.7
 amqp==1.4.9
 anyjson==0.3.3
-appdirs==1.4.3
-asgi-redis==0.14.1
-asgiref==0.14.0
-autobahn==0.16.0
+asgi-redis==0.11.0
+asgiref==0.13.0
+attrs==16.0.0
+autobahn==0.14.0
 Babel==2.3.4
-beautifulsoup4==4.4.1
 billiard==3.3.0.22
-blinker==1.3
 boto==2.40.0
 celery==3.1.19
-channels==0.17.3
-chardet==2.3.0
-checkbox-support==0.22
+cffi==1.6.0
+channels==0.13.1
 colorama==0.3.7
-command-not-found==0.3
-contextlib2==0.5.4
-coverage==4.2
-cryptography==1.2.3
-cycler==0.9.0
-daphne==0.14.3
-decorator==4.0.6
-defer==1.0.6
+contextlib2==0.5.3
+coverage==4.0.3
+cryptography==1.4
+daphne==0.12.0
 dj-database-url==0.4.1
-dj-static==0.0.6
 Django==1.8.8
 django-celery==3.1.17
 django-cors-headers==1.1.0
-django-countries==4.0
+django-countries==3.4.1
+django-easymoney==0.7
 django-extensions==1.6.7
-django-floppyforms==1.7.0
-django-idmap==1.0
+django-floppyforms==1.6.2
+django-idmap==0.4.1
 django-inspect-model==0.7
 django-sslify==0.2.7
-django-toolbelt==0.0.1
+django-sslserver==0.19
 django-vanilla-views==1.0.4
-djangorestframework==3.4.6
-docutils==0.12
-feedparser==5.1.3
+djangorestframework==3.3.3
+enum34==1.1.6
 funcsigs==1.0.2
-gtimelog==0.10.0
-guacamole==0.9.2
-gunicorn==18.0
 handy==0.5.3
 honcho==0.7.1
-html5lib==0.999
-httplib2==0.9.1
-huey==1.2.0
-idna==2.0
+huey==1.1.2
+idna==2.1
+ipaddress==1.0.16
 IPy==0.83
-ipython==2.4.1
-jedi==0.9.0
-Jinja2==2.8
 kombu==3.0.31
-language-selector==0.1
-louis==2.6.4
-lxml==3.5.0
-Mako==1.0.3
-MarkupSafe==0.23
-matplotlib==1.5.1
 mock==2.0.0
-msgpack-python==0.4.8
-numexpr==2.4.3
-numpy==1.11.0
-oauthlib==1.0.3
-onboard==1.2.0
+msgpack-python==0.4.7
 ordered-set==2.0.1
-otree-boto2-shim==0.3.2
-otree-core==1.4.18
+otree-core>=1.4.18
 otree-save-the-change==1.1.3
-packaging==16.8
-padme==1.1.1
-pandas==0.17.1
-pbr==1.10.0
-pep8==1.7.0
-pexpect==4.0.1
-Pillow==3.1.2
-plainbox==0.25
-psutil==4.2.0
-psycopg2==2.5.1
-ptyprocess==0.5
-py==1.4.31
+pbr==1.9.1
 pyasn1==0.1.9
-pycups==1.9.73
-pycurl==7.43.0
-pyflakes==1.1.0
-Pygments==2.1
-pygobject==3.20.0
-PyJWT==1.3.0
-pyparsing==2.2.0
-pytest==2.9.2
-pytest-django==3.0.0
-python-apt==1.1.0b1
-python-dateutil==2.4.2
-python-debian==0.1.27
-python-redis-lock==3.2.0
-python-systemd==231
-pytz==2016.6.1
-pyxdg==0.25
-pyzmq==15.2.0
-raven==5.25.0
+pyasn1-modules==0.0.8
+pycparser==2.14
+pyOpenSSL==16.0.0
+pytz==2016.4
+raven==5.17.0
 redis==2.10.5
-reportlab==3.3.0
-requests==2.11.1
-roman==2.0.0
-schema==0.6.2
-scipy==0.17.0
-screen-resolution-extra==0.0.0
+requests==2.10.0
 selenium==2.53.2
-sessioninstaller==0.0.0
-simplegeneric==0.8.1
+service-identity==16.0.0
 six==1.10.0
-Sphinx==1.3.6
-sphinx-rtd-theme==0.1.9
-spyder==2.3.8
-static3==0.7.0
-system-service==0.3
-tables==3.2.2
-tqdm==4.7.4
-Twisted==16.2.0
+Twisted==16.1.1
 txaio==2.5.1
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
 unicodecsv==0.14.1
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-firefoxbookmarks==0.1
-unity-scope-gdrive==0.7
-unity-scope-manpages==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
-unity-tweak-tool==0.0.7
-urllib3==1.13.1
-usb-creator==0.3.0
-whitenoise==3.2.1
-ws4py==0.3.5
-xdiagnose==3.8.4.1
-xkit==0.0.0
-XlsxWriter==0.9.3
+whitenoise==3.0
 xmltodict==0.10.1
 zope.interface==4.2.0
