--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,59 +1,74 @@
+alabaster==0.7.7
 amqp==1.4.9
 anyjson==0.3.3
-asgi-redis==0.11.0
-asgiref==0.13.0
-attrs==16.0.0
-autobahn==0.14.0
+asgi-redis==0.14.1
+asgiref==0.14.0
+autobahn==0.16.0
 Babel==2.3.4
+beautifulsoup4==4.4.1
 billiard==3.3.0.22
+blinker==1.3
 boto==2.40.0
 celery==3.1.19
-cffi==1.6.0
-channels==0.13.1
+channels==0.17.3
+chardet==2.3.0
+checkbox-support==0.22
 colorama==0.3.7
-contextlib2==0.5.3
-coverage==4.0.3
-cryptography==1.4
-daphne==0.12.0
+contextlib2==0.5.4
+coverage==4.2
+cryptography==1.2.3
+cycler==0.9.0
+daphne==0.14.3
+decorator==4.0.6
 dj-database-url==0.4.1
 Django==1.8.8
 django-celery==3.1.17
 django-cors-headers==1.1.0
-django-countries==3.4.1
-django-easymoney==0.7
+django-countries==4.0
 django-extensions==1.6.7
-django-floppyforms==1.6.2
-django-idmap==0.4.1
+django-floppyforms==1.7.0
+django-idmap==1.0
 django-inspect-model==0.7
 django-sslify==0.2.7
-django-sslserver==0.19
+django-toolbelt==0.0.1
 django-vanilla-views==1.0.4
-djangorestframework==3.3.3
-enum34==1.1.6
+djangorestframework==3.4.6
+docutils==0.12
+feedparser==5.1.3
 funcsigs==1.0.2
 handy==0.5.3
 honcho==0.7.1
-huey==1.1.2
-idna==2.1
-ipaddress==1.0.16
+huey==1.2.0
+idna==2.0
 IPy==0.83
 kombu==3.0.31
 mock==2.0.0
-msgpack-python==0.4.7
+msgpack-python==0.4.8
+numexpr==2.4.3
+numpy==1.11.0
+oauthlib==1.0.3
+onboard==1.2.0
 ordered-set==2.0.1
+
 otree-core>=1.4.18
 otree-save-the-change==1.1.3
-pbr==1.9.1
+pbr==1.10.0
+pep8==1.7.0
 pyasn1==0.1.9
-pyasn1-modules==0.0.8
-pycparser==2.14
-pyOpenSSL==16.0.0
-pytz==2016.4
-raven==5.17.0
+pycups==1.9.73
+pycurl==7.43.0
+PyJWT==1.3.0
+pyparsing==2.2.0
+pytest==2.9.2
+pytest-django==3.0.0
+pytz==2016.6.1
+pyxdg==0.25
+pyzmq==15.2.0
+raven==5.25.0
 redis==2.10.5
-requests==2.10.0
+requests==2.11.1
 selenium==2.53.2
-service-identity==16.0.0
+sessioninstaller==0.0.0
 six==1.10.0
 Twisted==16.2.0
 txaio==2.5.1
